[package]
name = "spwn"
version = "0.1.0"
authors = ["Ryan Gorup <gorup@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5", features = ["async-task", "unstable"], optional = true  }
tokio = { version = "0.2", features = ["rt-core"], optional = true }

[features]
tokio02 = [
    "tokio"
]

async-std15 = [
    "async-std"
]

# smol = [
#     "smol"
# ]

[dev-dependencies]
rusoto_core = "0.43.0"
rusoto_sts = "0.43.0"
async-std = { version = "1.5", features = ["attributes"] }
tokio = "0.2"
spwn = { path = ".", features = ["tokio02", "async-std15"]}
hyper = { path = "../hyper" }