[package]
name = "spwn"
version = "0.1.0"
authors = ["Ryan Gorup <gorup@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6", features = ["async-task", "unstable"], optional = true  }
tokio = { version = "0.2", features = ["rt-core"], optional = true }

[features]
tokio02 = [
    "tokio"
]

async-std16 = [
    "async-std"
]

[dev-dependencies]
async-std = { version = "1.6", features = ["attributes"] }
tokio = { version = "0.2", features = ["full"] }
spwn = { path = ".", features = ["tokio02", "async-std16"]}
hyper = { path = "../hyper" }
