[package]
name = "spwn"
version = "0.1.0"
authors = ["Ryan Gorup <gorup@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6", features = ["async-task", "unstable"], optional = true  }
tokio = { version = "0.2", features = ["rt-core"], optional = true }

[features]
tokio02 = [
    "tokio"
]

async-std16 = [
    "async-std"
]

[dev-dependencies]
async-std = { version = "1.6", features = ["attributes"] }
tokio = { version = "0.2", features = ["full"] }
spwn = { path = ".", features = ["tokio02", "async-std16"]}
log = "0.4"
env_logger = "0.7"
hyper = "0.13"
tide = "0.13"
surf = "1.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket", ref = "1369dc47a357567ec3d3d711e318248dabd4b7f7" }
# hyper = { path = "../hyper" }
